# up

./: .coverage  .cursorrules  .gitignore  .loop_state.json.migrated  CLAUDE.md  Git for AI Vibe Coding.txt  Readme.md  ace-fca.md  blog-up-platform.md  prd-master.json  prd-phase2.json  prd-phase3.json  prd-phase4.json  prd-phase5.json  prd-phase6.json  prd.json  pyproject.toml
.claude/: context_budget.json.migrated
.claude/skills/docs-system/: SKILL.md
.claude/skills/learning-system/: SKILL.md  prd.json  prd_template.json  project_analyzer.py  project_profile.json  sources.json
.claude/skills/learning-system/file_learnings/: 2026-02-04_git_for_ai_vibe_coding.json  2026-02-04_git_for_ai_vibe_coding.md  2026-02-07_260202164.md
.claude/skills/learning-system/insights/: 2026-02-04_git_for_ai_vibe_coding_insights.md  2026-02-05-implementation-review.md  gap-analysis.md  patterns.md
.claude/skills/learning-system/research/: 2026-02-04-git-design-philosophy-scaling.md  2026-02-06-hardening-patterns.md  2026-02-23-large-project-vibe-coding.md  2026-02-23-v1-cli-design-research.md  2026-02-24-ace-fca-context-engineering.md
.claude/skills/product-loop/: SKILL.md  circuit_breaker.py  state_manager.py
.cursor/rules/: docs.md  main.md  python.md  tests.md  typescript.md
docs/: AI_PROGRAMMING_BEHAVIORAL_ANALYSIS.md  AI_VIBING_CODING_APPROACH.md  CONTEXT.md  CURSOR_HISTORY_EXTRACTION.md  DOCS_SYSTEM_ANALYSIS.md  INDEX.md  MULTI_AGENT_SKILLS_DESIGN.md  PYPI_PUBLISHING.md  README.md  TARGET.md
docs/architecture/: INTEGRATED_LIFECYCLE.md  MULTI_WORKTREE_EXECUTION.md  README.md  SESRC_DESIGN.md
docs/changelog/: README.md
docs/decisions/: 2026-02-27-use-filelock-for-concurrent-file.md  README.md
docs/development/: README.md
docs/features/: README.md
docs/guides/: CONCURRENCY_AND_THREAD_SAFETY.md  CURSOR_CLAUDE_INTEGRATION.md  README.md  TARGET_AND_SELF_EVOLUTION.md
docs/handoff/: LATEST.md  README.md
docs/learnings/: ERRORS.md  PATTERNS.md  README.md
docs/operations/: README.md
docs/releases/: README.md
docs/research/: README.md
docs/reviews/: README.md
docs/roadmap/: IMPROVEMENT_PLAN.md  README.md
docs/roadmap/phases/: PHASE_1_FOUNDATION.md
docs/roadmap/vision/: PRODUCT_VISION.md
docs/tests/: README.md
docs/todo/: README.md
src/up/: __init__.py  _hook_runtime.py  ai_cli.py  cli.py  concurrency.py  context.py  events.py  exceptions.py  memory.py  parallel.py  parallel_scheduler.py  summarizer.py
src/up/ai/: __init__.py  engine.py  sdk_engine.py
src/up/commands/: agent.py  bisect.py  branch.py  dashboard.py  done.py  init.py  learn.py  memory.py  new.py  plugin.py  provenance.py  review.py  start.py  status.py  summarize.py  sync.py  sync_config.py  vibe.py
src/up/commands/start/: __init__.py  command.py  helpers.py  loop.py  verification.py
src/up/core/: __init__.py  checkpoint.py  loop.py  prd_schema.py  provenance.py  state.py
src/up/git/: __init__.py  utils.py  worktree.py
src/up/learn/: __init__.py  analyzer.py  continuous.py  plan.py  research.py  utils.py
src/up/memory/: __init__.py  _manager.py  entry.py  patterns.py  stores.py
src/up/parallel/: __init__.py  analyze.py  executor.py  explore.py  scheduler.py
src/up/plugins/: __init__.py  bridge.py  hooks.py  loader.py  manifest.py  marketplace.py  registry.py  rules.py
src/up/plugins/builtin/memory/: plugin.json
src/up/plugins/builtin/memory/hooks/: auto_index.py  auto_learn.py  auto_recall.py  auto_record.py  hooks.json  session_prime.py
src/up/plugins/builtin/provenance/: plugin.json
src/up/plugins/builtin/provenance/hooks/: auto_record.py  context_capture.py  hooks.json
src/up/plugins/builtin/safety/: plugin.json
src/up/plugins/builtin/safety/hooks/: hooks.json  (+2 more)
src/up/plugins/builtin/verify/: plugin.json
src/up/plugins/installed/bisect/: plugin.json
src/up/plugins/installed/code-review/: plugin.json
src/up/plugins/installed/git-workflow/: plugin.json
src/up/plugins/installed/security-guidance/: plugin.json
src/up/sync/: __init__.py  claude_md.py  claude_settings.py  cursorrules.py  renderer.py
src/up/templates/: __init__.py
src/up/templates/config/: __init__.py
src/up/templates/docs/: SKILL.md  __init__.py
src/up/templates/docs/standards/: HEADERS.md  STRUCTURE.md  TEMPLATES.md
src/up/templates/learn/: __init__.py
src/up/templates/loop/: __init__.py
src/up/templates/mcp/: __init__.py
src/up/templates/projects/: __init__.py
src/up/templates/projects/plugin/: plugin.json
src/up/ui/: __init__.py  explore_display.py  loop_display.py  theme.py
tests/: conftest.py  test_ai_cli.py  test_auto_index.py  test_auto_recall.py  test_auto_record.py  test_auto_sync.py  test_bisect_plugin.py  test_claude_md_renderer.py  test_claude_settings_renderer.py  test_code_review_plugin.py  test_config_renderer.py  test_context_capture.py  test_cursorrules_renderer.py  test_custom_strategies.py  test_e2e_loop.py  test_error_patterns.py  test_explore_analyzer.py  test_explore_custom_strategies.py  test_explore_display.py  test_explore_executor.py  test_explore_merge.py  test_explore_strategy.py  test_git_workflow_plugin.py  test_hook_runner.py  test_hook_runtime.py  test_init_sync.py  test_marketplace.py  test_memory_hint.py  test_memory_plugin.py  test_parallel.py  test_pipeline_orchestration.py  test_placeholder.py  test_plugin_bridge.py  test_plugin_loader.py  test_plugin_manifest.py  test_plugin_registry.py  test_plugin_search.py  test_plugin_template.py  test_provenance_commands.py  test_provenance_hook.py  (+7 more)
tests/test_commands/: test_init_new.py  test_start.py  test_vibe.py
tests/test_core/: test_checkpoint.py  test_exceptions.py  test_loop_orchestrator.py  test_parallel_scheduler.py  test_provenance.py  test_state.py
tests/test_git/: test_utils.py
(+18 files in other folders)
