[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "up-cli"
version = "0.5.0"
description = "Verifiable, observable AI-assisted development for building stable, high-performance software"
readme = "Readme.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "scaffolding", "ai", "claude", "cursor", "productivity", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "chromadb>=0.4.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-subprocess>=1.5",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
up = "up.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/up-cli"
Documentation = "https://github.com/yourusername/up-cli#readme"
Repository = "https://github.com/yourusername/up-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/up"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["up"]
omit = ["*/templates/*", "*/ui/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
